top alignment fix

--- a/src/app/learner/pages/learner-new-my-course/learner-new-my-course.component.scss
+++ b/src/app/learner/pages/learner-new-my-course/learner-new-my-course.component.scss
@@ -1278,6 +1278,7 @@
   // .mat-progress-bar-fill::after {
   //   background-image: linear-gradient(to right, #F7941E);
   // }
+  margin-top: 20px;
   .mat-progress-bar{
     height: 2px;
   }
